Ajout header & localisation

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <div><img src="public/logo/ohmyfood.png" alt="logo"/></div>
     </header>
     <main>
-    <section>
-        <i class="fas fa-map-marker-alt"></i>
+    <section class="localisation">
+        <i class="fas fa-map-marker-alt" ></i>
         <p>Paris, Belleville</p>
     </section>
-    <section>
+    <section class="section-explorer">
         <h1>Réservez le menu qui vous convient</h1>
         <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
         <a href="#">Explorez nos restaurants</a>
