--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://kit.fontawesome.com/28876ce5ae.js" crossorigin="anonymous"></script>
 </head>
 
-<body></main>
+<body>
     <header>
         <div><img src="public/logo/ohmyfood.png" alt="logo"/></div>
     </header>
@@ -23,51 +23,62 @@
         <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
         <a href="#">Explorez nos restaurants</a>
     </section>
-    <section>
+    <section class="section-menu">
         <h1>Fonctionnement</h1>
         <div>
-            <div><i class="fas fa-mobile-alt"></i> Choisissez un restaurant</div>
-            <div><i class="fas fa-list-ul"></i> Composez votre menu</div>
-            <div><i class="fas fa-store"></i> Dégustez au restaurant</div>
+            <div><i class="fas fa-mobile-alt"></i>Choisissez un restaurant
+            <div>1</div></div>
+            <div><i class="fas fa-list-ul"></i> Composez votre menu <div>2</div></div>
+            <div><i class="fas fa-store"></i> Dégustez au restaurant <div>3</div></div>
         </div>
     </section>
-    <section>
-        <h1>Restaurants</h1>
-        <a href="#">
+    <section class="section-restaurants">
+        <h1 id="section-restaurants__titre">Restaurants</h1>
+        <div>
+            <article>
+            <a href="#">
             <img src="public/restaurants/lapalettedugout.jpg"/>
             <div><h2>La palette du goût</h2>
                  <p>Ménilmontant</p>
+                 <div class="section-restaurants__coeur"><i class="far fa-heart"></i></div>
             </div>
-            <div><i class="far fa-heart"></i></div>
         </a>
+            </article>  
+            <article>
         <a href="#">
             <img src="public/restaurants/lanoteenchantée.jpg"/>
             <div>
                 <h2>La note enchantée</h2>
                 <p>Charonne</p>
+                <div class="section-restaurants__coeur"><i class="far fa-heart"></i></div>
             </div>
-            <div><i class="far fa-heart"></i></div>
         </a>
+        </article>
+        <article>
         <a href="#">
                 <img src="public/restaurants/alafrancaise.jpg"/>
                 <div>
                     <h2>A la française</h2>
                     <p>Cité Rouge</p>
+                    <div class="section-restaurants__coeur"><i class="far fa-heart"></i></div>
                 </div>
-                <div><i class="far fa-heart"></i></div>
         </a>
+        </article>
+        <article>
         <a href="#">
             <img src="public/restaurants/ledelicedessens.jpg"/>
             <div>
                 <h2>Le délice des sens</h2>
                 <p>Folie-Méricourt</p>
+                <div class="section-restaurants__coeur"><i class="far fa-heart"></i></div>
             </div>
-            <div><i class="far fa-heart"></i></div>
         </a>
+        </article>
+        </div>
     </section>
     </main>
     <footer>
-        <img src="public/logo/ohmyfood.png" />
+        <h1>ohmyfood</h1>
         <div>
             <ul>
                 <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant </a> </li>
