--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Ohmyfood</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="public/css/style.css">
     <script src="https://kit.fontawesome.com/28876ce5ae.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header>
-        <h1>ohmyfood</h1>
+        <h1><a href="#">ohmyfood</a></h1>
     </header>
     <main>
     <section class="localisation">
@@ -35,19 +35,20 @@
     <section class="section-restaurants">
         <h1 id="section-restaurants__titre">Restaurants</h1>
         <div>
-            <article>
+            <article class="one">
             <a href="#">
             <img src="public/restaurants/lapalettedugout.jpg"/>
             <span>Nouveau</span>
             <div><h2>La palette du goût</h2>
                  <p>Ménilmontant</p>
-                 <div class="section-restaurants__coeur"><i class="coeur1 far fa-heart"></i>
-                 <i class="coeur2 fas fa-heart"></i>
-                 </div>
+                 <div class="section-restaurants__coeur">
+                    <i class="coeur1 far fa-heart"></i>
+                    <i class="coeur2 fas fa-heart"></i>
+                </div>
             </div>
         </a>
-            </article>  
-            <article>
+            </article> 
+            <article class="two">
         <a href="#">
             <img src="public/restaurants/lanoteenchantée.jpg"/>
             <span>Nouveau</span>
@@ -58,10 +59,9 @@
             </div>
         </a>
         </article>
-        <article>
+        <article class="three">
         <a href="#">
                 <img src="public/restaurants/alafrancaise.jpg"/>
-                <span>Nouveau</span>
                 <div>
                     <h2>A la française</h2>
                     <p>Cité Rouge</p>
@@ -69,10 +69,9 @@
                 </div>
         </a>
         </article>
-        <article>
+        <article class="four">
         <a href="#">
-            <img src="public/restaurants/ledelicedessens.jpg"/>
-            <span>Nouveau</span>
+            <img src="public/restaurants/ledelicedessens.jpg"/>   
             <div>
                 <h2>Le délice des sens</h2>
                 <p>Folie-Méricourt</p>
