--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -10,6 +10,84 @@
 </head>
 
 <body>
+    <header>
+        <i class="fas fa-arrow-left"></i>
+        <h1><a href="#">ohmyfood</a></h1>
+    </header>
+    <div>
+        <img src="/public/restaurants/lapalettedugout.jpg" alt="la palette du gout"/>
+    </div>
+    <section class="section-menu_">
+        <div class="nom-restaurant">
+        <h1>La palette du goût</h1>
+        <i class="coeur1 far fa-heart"></i>
+        </div>
+        
+        <h2 class="section-menu__type">ENTREES</h2>
+        <div>
+            <article>
+                <h2>Fricassée d'escargot</h2>
+                <p>Au pimet d'espelette</p>
+                <span>25€</span>
+            </article>
+            <article>
+                <h2>Foie gras de canard mi-cuit</h2>
+                <p>Et ses copeaux de truffe noire</p>
+                <span>35€</span>
+            </article><article>
+                <h2>Oeuf au plat</h2>
+                <p>Assaisonné  la truffe sur lit de salade</p>
+                <span>20€</span>
+            </article>
+        </div>
+        <h2 class="section-menu__type">PLATS</h2>
+        <div>
+            <article>
+                <h2>Filet de boeuf aux herbes</h2>
+                <p>Accompagné de sa ribambelle de légu..</p>
+                <span>40€</span>
+            </article>
+            <article>
+                <h2>Parmentier de queue de boeuf</h2>
+                <p>A la truffe noire sur sa purée de panais</p>
+                <span>35€</span>
+            </article>
+            <article>
+                <h2>Filet de Turbot</h2>
+                <p>Aux agrumes</p>
+                <span>44€</span>
+            </article>
+        </div>
+        <h2 class="section-menu__type">DESSERTS</h2>
+        <div>
+            <article>
+                <h2>Paris-Brest</h2>
+                <p>Revisité</p>
+                <span>18€</span>
+            </article>
+            <article>
+                <h2>Macaron au chocolat d'exception</h2>
+                <p>Et glace à la vanille de Madagascar</p>
+                <span>22€</span>
+            </article>
+            <article>
+                <h2>Mousse au chocolat</h2>
+                <p>Au piment d'espelette et à la truffe noire</p>
+                <span>23€</span>
+            </article>
+        </div>
+        <div>Commander</div>
+    </section>
+    <footer>
+        <h1>ohmyfood</h1>
+        <div>
+            <ul>
+                <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant </a> </li>
+                <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
+                <li><a href="#">Mentions légales</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
-
 </html>
