Ajout des liens

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1><a href="#">ohmyfood</a></h1>
+        <h1><a href="index.html">ohmyfood</a></h1>
     </header>
     <main>
     <section class="localisation">
@@ -36,20 +36,22 @@
         <h1 id="section-restaurants__titre">Restaurants</h1>
         <div>
             <article class="one">
-            <a href="#">
+            <a href="la-palette-du-gout.html">
             <img src="public/restaurants/lapalettedugout.jpg"/>
             <span>Nouveau</span>
-            <div><h2>La palette du goût</h2>
+            <div class="section-restaurants__article"><h2>La palette du goût</h2>
                  <p>Ménilmontant</p>
                  <div class="section-restaurants__coeur">
                     <i class="coeur1 far fa-heart"></i>
+                </div>
+                <div class="section-restaurant__animation">
                     <i class="coeur2 fas fa-heart"></i>
                 </div>
             </div>
         </a>
             </article> 
             <article class="two">
-        <a href="#">
+        <a href="la-note-enchantée.html">
             <img src="public/restaurants/lanoteenchantée.jpg"/>
             <span>Nouveau</span>
             <div>
@@ -60,7 +62,7 @@
         </a>
         </article>
         <article class="three">
-        <a href="#">
+        <a href="A-la-francaise.html">
                 <img src="public/restaurants/alafrancaise.jpg"/>
                 <div>
                     <h2>A la française</h2>
@@ -70,7 +72,7 @@
         </a>
         </article>
         <article class="four">
-        <a href="#">
+        <a href="Le-delice-des-sens.html">
             <img src="public/restaurants/ledelicedessens.jpg"/>   
             <div>
                 <h2>Le délice des sens</h2>
