--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -11,11 +11,13 @@
 
 <body>
     <header>
+        <a href="index.html">
         <i class="fas fa-arrow-left"></i>
-        <h1><a href="#">ohmyfood</a></h1>
+        </a>
+        <h1><a href="index.html">ohmyfood</a></h1>
     </header>
     <div>
-        <img src="/public/restaurants/lapalettedugout.jpg" alt="la palette du gout"/>
+        <img src="public/restaurants/lapalettedugout.jpg" alt="la palette du gout"/>
     </div>
     <section class="section-menu_">
         <div class="nom-restaurant">
