Ajout du bouton commander

--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -16,10 +16,10 @@
         </a>
         <h1><a href="index.html">ohmyfood</a></h1>
     </header>
-    <div>
+    <div class="image">
         <img src="public/restaurants/lapalettedugout.jpg" alt="la palette du gout"/>
     </div>
-    <section class="section-menu_">
+    <section id="section-menu_">
         <div class="nom-restaurant">
         <h1>La palette du goût</h1>
         <i class="coeur1 far fa-heart"></i>
@@ -78,7 +78,7 @@
                 <span>23€</span>
             </article>
         </div>
-        <div>Commander</div>
+        <div class="bouton-commander"><a href="#">Commander</a></div>
     </section>
     <footer>
         <h1>ohmyfood</h1>
