Ajout animation coeur

--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -21,8 +21,16 @@
     </div>
     <section id="section-menu_">
         <div class="nom-restaurant">
+            <div>
         <h1>La palette du goût</h1>
+        <div>
+        <div class="section-menu__coeur" >
         <i class="coeur1 far fa-heart"></i>
+        </div>
+        <div class="section-menu__animation">
+            <i class="coeur2 fas fa-heart"></i>
+        </div>
+        </div>
         </div>
         
         <h2 class="section-menu__type">ENTREES</h2>
