--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
             <span>Nouveau</span>
             <div class="section-restaurants__article"><h2>La palette du goût</h2>
                  <p>Ménilmontant</p>
-                 <div class="section-restaurants__coeur">
+                 <div class="section-restaurants__coeur section-menu__coeur">
                     <i class="coeur1 far fa-heart"></i>
                 </div>
-                <div class="section-restaurant__animation">
+                <div class="section-restaurant__animation section-menu__animation">
                     <i class="coeur2 fas fa-heart"></i>
                 </div>
             </div>
@@ -54,30 +54,45 @@
         <a href="la-note-enchantée.html">
             <img src="public/restaurants/lanoteenchantée.jpg"/>
             <span>Nouveau</span>
-            <div>
+            <div class="section-restaurants__article">
                 <h2>La note enchantée</h2>
                 <p>Charonne</p>
-                <div class="section-restaurants__coeur"><i class="far fa-heart"></i></div>
+                <div class="section-restaurants__coeur section-menu__coeur">
+                    <i class="coeur1 far fa-heart"></i>
+                </div>
+                <div class="section-restaurant__animation section-menu__animation">
+                    <i class="coeur2 fas fa-heart"></i>
+                </div>
             </div>
         </a>
         </article>
         <article class="three">
         <a href="A-la-francaise.html">
                 <img src="public/restaurants/alafrancaise.jpg"/>
-                <div>
+                <div class="section-restaurants__article">
                     <h2>A la française</h2>
                     <p>Cité Rouge</p>
-                    <div class="section-restaurants__coeur"><i class="far fa-heart"></i></div>
+                    <div class="section-restaurants__coeur section-menu__coeur">
+                        <i class="coeur1 far fa-heart"></i>
+                    </div>
+                    <div class="section-restaurant__animation section-menu__animation">
+                        <i class="coeur2 fas fa-heart"></i>
+                    </div>
                 </div>
         </a>
         </article>
         <article class="four">
         <a href="Le-delice-des-sens.html">
             <img src="public/restaurants/ledelicedessens.jpg"/>   
-            <div>
+            <div class="section-restaurants__article">
                 <h2>Le délice des sens</h2>
                 <p>Folie-Méricourt</p>
-                <div class="section-restaurants__coeur"><i class="far fa-heart"></i></div>
+                <div class="section-restaurants__coeur section-menu__coeur">
+                    <i class="coeur1 far fa-heart"></i>
+                </div>
+                <div class="section-restaurant__animation section-menu__animation">
+                    <i class="coeur2 fas fa-heart"></i>
+                </div>
             </div>
         </a>
         </article>
