--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -34,53 +34,57 @@
         </div>
         
         <h2 class="section-menu__type">ENTREES</h2>
+        <div class="section-menu__soulignement"></div>
         <div>
-            <article>
+            <article class="section-menu__article">
                 <h2>Fricassée d'escargot</h2>
                 <p>Au pimet d'espelette</p>
                 <span>25€</span>
             </article>
-            <article>
+            <article class="section-menu__article">
                 <h2>Foie gras de canard mi-cuit</h2>
                 <p>Et ses copeaux de truffe noire</p>
                 <span>35€</span>
-            </article><article>
+            </article>
+            <article class="section-menu__article">
                 <h2>Oeuf au plat</h2>
                 <p>Assaisonné  la truffe sur lit de salade</p>
                 <span>20€</span>
             </article>
         </div>
         <h2 class="section-menu__type">PLATS</h2>
+        <div class="section-menu__soulignement"></div>
         <div>
-            <article>
+            <article class="section-menu__article">
                 <h2>Filet de boeuf aux herbes</h2>
                 <p>Accompagné de sa ribambelle de légu..</p>
                 <span>40€</span>
             </article>
-            <article>
+            <article class="section-menu__article">
                 <h2>Parmentier de queue de boeuf</h2>
                 <p>A la truffe noire sur sa purée de panais</p>
                 <span>35€</span>
             </article>
-            <article>
+            <article class="section-menu__article">
                 <h2>Filet de Turbot</h2>
                 <p>Aux agrumes</p>
                 <span>44€</span>
             </article>
         </div>
         <h2 class="section-menu__type">DESSERTS</h2>
+        <div class="section-menu__soulignement"></div>
         <div>
-            <article>
+            <article class="section-menu__article">
                 <h2>Paris-Brest</h2>
                 <p>Revisité</p>
                 <span>18€</span>
             </article>
-            <article>
+            <article class="section-menu__article">
                 <h2>Macaron au chocolat d'exception</h2>
                 <p>Et glace à la vanille de Madagascar</p>
                 <span>22€</span>
             </article>
-            <article>
+            <article class="section-menu__article">
                 <h2>Mousse au chocolat</h2>
                 <p>Au piment d'espelette et à la truffe noire</p>
                 <span>23€</span>
