Ajout bordure image

--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -21,7 +21,6 @@
     </div>
     <section id="section-menu_">
         <div class="nom-restaurant">
-            <div>
         <h1>La palette du goût</h1>
         <div>
         <div class="section-menu__coeur" >
@@ -32,7 +31,8 @@
         </div>
         </div>
         </div>
-        
+
+        <div class="main">
         <h2 class="section-menu__type">ENTREES</h2>
         <div class="section-menu__soulignement"></div>
         <div>
@@ -91,6 +91,7 @@
             </article>
         </div>
         <div class="bouton-commander"><a href="#">Commander</a></div>
+        </div>
     </section>
     <footer>
         <h1>ohmyfood</h1>
