Ajout animation article 1

--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -38,8 +38,13 @@
         <div>
             <article class="section-menu__article">
                 <h2>Fricassée d'escargot</h2>
+                <div class="section-menu__article__description">
                 <p>Au pimet d'espelette</p>
                 <span>25€</span>
+                </div>
+                <div class="section-menu__article__animation">
+                    <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
+                </div>
             </article>
             <article class="section-menu__article">
                 <h2>Foie gras de canard mi-cuit</h2>
