Ajout des animation menu

--- a/index.html
+++ b/index.html
@@ -61,12 +61,15 @@
             <div class="section-restaurants__article">
                 <h2>La note enchantée</h2>
                 <p>Charonne</p>
+            <div class="input-animation">
+                <input type="checkbox">
                 <div class="section-restaurants__coeur section-menu__coeur">
                     <i class="coeur1 far fa-heart"></i>
                 </div>
                 <div class="section-restaurant__animation section-menu__animation">
                     <i class="coeur2 fas fa-heart"></i>
                 </div>
+            </div>
             </div>
         </a>
         </article>
