--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -14,15 +14,18 @@
 </head>
 
 <body>
+    <!-- HEADER -->
     <header>
         <a href="index.html">
         <i class="fas fa-arrow-left"></i>
         </a>
         <h1><a href="index.html">ohmyfood</a></h1>
     </header>
+    <!--IMAGE-->
     <div class="image">
         <img src="public/restaurants/lapalettedugout.jpg" alt="la palette du gout"/>
     </div>
+    <!--SECTION MENU-->
     <section id="section-menu_">
         <div class="nom-restaurant">
         <h1>La palette du goût</h1>
@@ -35,7 +38,7 @@
         </div>
         </div>
         </div>
-
+        <!--ENTREES-->
         <div class="main">
         <h2 class="section-menu__type">ENTREES</h2>
         <div class="section-menu__soulignement"></div>
@@ -50,58 +53,104 @@
                     <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
                 </div>
             </article>
+
             <article class="section-menu__article">
                 <h2>Foie gras de canard mi-cuit</h2>
+                <div class="section-menu__article__description">
                 <p>Et ses copeaux de truffe noire</p>
                 <span>35€</span>
+                </div>
+                <div class="section-menu__article__animation">
+                    <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
+                </div>
             </article>
+
             <article class="section-menu__article">
                 <h2>Oeuf au plat</h2>
+                <div class="section-menu__article__description">
                 <p>Assaisonné  la truffe sur lit de salade</p>
                 <span>20€</span>
+                </div>
+                <div class="section-menu__article__animation">
+                    <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
+                </div>
             </article>
         </div>
+        <!--PLATS-->
         <h2 class="section-menu__type">PLATS</h2>
         <div class="section-menu__soulignement"></div>
         <div>
             <article class="section-menu__article">
                 <h2>Filet de boeuf aux herbes</h2>
+                <div class="section-menu__article__description">
                 <p>Accompagné de sa ribambelle de légu..</p>
                 <span>40€</span>
+                </div>
+                <div class="section-menu__article__animation">
+                    <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
+                </div>
             </article>
             <article class="section-menu__article">
                 <h2>Parmentier de queue de boeuf</h2>
+                <div class="section-menu__article__description">
                 <p>A la truffe noire sur sa purée de panais</p>
                 <span>35€</span>
+                </div>
+                <div class="section-menu__article__animation">
+                    <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
+                </div>
             </article>
             <article class="section-menu__article">
                 <h2>Filet de Turbot</h2>
+                <div class="section-menu__article__description">
                 <p>Aux agrumes</p>
                 <span>44€</span>
+                </div>
+                <div class="section-menu__article__animation">
+                    <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
+                </div>
             </article>
         </div>
+        <!--DESSERTS-->
         <h2 class="section-menu__type">DESSERTS</h2>
         <div class="section-menu__soulignement"></div>
         <div>
             <article class="section-menu__article">
                 <h2>Paris-Brest</h2>
+                <div class="section-menu__article__description">
                 <p>Revisité</p>
                 <span>18€</span>
+                </div>
+                <div class="section-menu__article__animation">
+                    <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
+                </div>
             </article>
             <article class="section-menu__article">
                 <h2>Macaron au chocolat d'exception</h2>
+                <div class="section-menu__article__description">
                 <p>Et glace à la vanille de Madagascar</p>
                 <span>22€</span>
+                </div>
+                <div class="section-menu__article__animation">
+                    <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
+                </div>
             </article>
             <article class="section-menu__article">
                 <h2>Mousse au chocolat</h2>
+                <div class="section-menu__article__description">
                 <p>Au piment d'espelette et à la truffe noire</p>
                 <span>23€</span>
+                </div>
+                <div class="section-menu__article__animation">
+                    <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
+                </div>
             </article>
         </div>
+        <!--BOUTON COMMANDER-->
         <div class="bouton-commander"><a href="#">Commander</a></div>
         </div>
     </section>
+    <!--FOOTER-->
     <footer>
         <h1>ohmyfood</h1>
         <div>
