Ajout propriété overflow description

--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -83,7 +83,7 @@
             <article class="section-menu__article">
                 <h2>Filet de boeuf aux herbes</h2>
                 <div class="section-menu__article__description">
-                <p>Accompagné de sa ribambelle de légu..</p>
+                <p>Accompagné de sa ribambelle de légumes</p>
                 <span>40€</span>
                 </div>
                 <div class="section-menu__article__animation">
