Validator w3c avec modifications nécessaires

--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
         <h1><a href="index.html">ohmyfood</a></h1>
     </header>
     <main>
-    <section class="localisation">
+    <div class="localisation">
         <i class="fas fa-map-marker-alt" ></i>
         <p>Paris, Belleville</p>
-    </section>
+    </div>
     <section class="section-explorer">
-        <h1>Réservez le menu qui vous convient</h1>
+        <h2>Réservez le menu qui vous convient</h2>
         <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
         <a href="#">Explorez nos restaurants</a>
     </section>
     <section class="section-menu">
-        <h1>Fonctionnement</h1>
+        <h2>Fonctionnement</h2>
         <div>
             <div><i class="fas fa-mobile-alt icon"></i>Choisissez un restaurant
             <div class="section-menu__numero">1</div></div>
@@ -37,11 +37,11 @@
         </div>
     </section>
     <section class="section-restaurants">
-        <h1 id="section-restaurants__titre">Restaurants</h1>
+        <h2 id="section-restaurants__titre">Restaurants</h2>
         <div>
             <article class="one">
             <a href="la-palette-du-gout.html">
-            <img src="public/restaurants/lapalettedugout.jpg"/>
+            <img src="public/restaurants/lapalettedugout.jpg" alt="La palette du gout"/>
             <span>Nouveau</span>
             <div class="section-restaurants__article"><h2>La palette du goût</h2>
                  <p>Ménilmontant</p>
@@ -56,7 +56,7 @@
             </article> 
             <article class="two">
         <a href="la-note-enchantée.html">
-            <img src="public/restaurants/lanoteenchantée.jpg"/>
+            <img src="public/restaurants/lanoteenchantée.jpg" alt="La note enchantée"/>
             <span>Nouveau</span>
             <div class="section-restaurants__article">
                 <h2>La note enchantée</h2>
@@ -72,7 +72,7 @@
         </article>
         <article class="three">
         <a href="A-la-francaise.html">
-                <img src="public/restaurants/alafrancaise.jpg"/>
+                <img src="public/restaurants/alafrancaise.jpg" alt="A la française"/>
                 <div class="section-restaurants__article">
                     <h2>A la française</h2>
                     <p>Cité Rouge</p>
@@ -87,7 +87,7 @@
         </article>
         <article class="four">
         <a href="Le-delice-des-sens.html">
-            <img src="public/restaurants/ledelicedessens.jpg"/>   
+            <img src="public/restaurants/ledelicedessens.jpg" alt="Le délice des sens"/>   
             <div class="section-restaurants__article">
                 <h2>Le délice des sens</h2>
                 <p>Folie-Méricourt</p>
