--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 </head>
 
 <body>
+    <div class="loadcontent">
+        <div class="loading"></div>
+    </div>
     <header>
         <h1><a href="index.html">ohmyfood</a></h1>
     </header>
