Ajout animation menu

--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -43,8 +43,8 @@
         <div class="main">
         <h3 class="section-menu__type">ENTREES</h3>
         <div class="section-menu__soulignement"></div>
-        <div>
-            <article class="section-menu__article">
+        <div class="column1">
+            <article class="section-menu__article article1">
                 <h2>Fricassée d'escargot</h2>
                 <div class="section-menu__article__description">
                 <p>Au pimet d'espelette</p>
@@ -55,7 +55,7 @@
                 </div>
             </article>
 
-            <article class="section-menu__article">
+            <article class="section-menu__article article2">
                 <h2>Foie gras de canard mi-cuit</h2>
                 <div class="section-menu__article__description">
                 <p>Et ses copeaux de truffe noire</p>
@@ -66,7 +66,7 @@
                 </div>
             </article>
 
-            <article class="section-menu__article">
+            <article class="section-menu__article article3">
                 <h2>Oeuf au plat</h2>
                 <div class="section-menu__article__description">
                 <p>Assaisonné  la truffe sur lit de salade</p>
@@ -80,8 +80,8 @@
         <!--PLATS-->
         <h3 class="section-menu__type">PLATS</h3>
         <div class="section-menu__soulignement"></div>
-        <div>
-            <article class="section-menu__article">
+        <div class="column2">
+            <article class="section-menu__article article4">
                 <h2>Filet de boeuf aux herbes</h2>
                 <div class="section-menu__article__description">
                 <p>Accompagné de sa ribambelle de légumes</p>
@@ -91,7 +91,7 @@
                     <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
                 </div>
             </article>
-            <article class="section-menu__article">
+            <article class="section-menu__article article5">
                 <h2>Parmentier de queue de boeuf</h2>
                 <div class="section-menu__article__description">
                 <p>A la truffe noire sur sa purée de panais</p>
@@ -101,7 +101,7 @@
                     <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
                 </div>
             </article>
-            <article class="section-menu__article">
+            <article class="section-menu__article article6">
                 <h2>Filet de Turbot</h2>
                 <div class="section-menu__article__description">
                 <p>Aux agrumes</p>
@@ -115,8 +115,8 @@
         <!--DESSERTS-->
         <h3 class="section-menu__type">DESSERTS</h3>
         <div class="section-menu__soulignement"></div>
-        <div>
-            <article class="section-menu__article">
+        <div class="column3">
+            <article class="section-menu__article article7">
                 <h2>Paris-Brest</h2>
                 <div class="section-menu__article__description">
                 <p>Revisité</p>
@@ -126,7 +126,7 @@
                     <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
                 </div>
             </article>
-            <article class="section-menu__article">
+            <article class="section-menu__article article8">
                 <h2>Macaron au chocolat d'exception</h2>
                 <div class="section-menu__article__description">
                 <p>Et glace à la vanille de Madagascar</p>
@@ -136,7 +136,7 @@
                     <div class="div-check-circle"><i class="far fa-check-circle"></i></div>
                 </div>
             </article>
-            <article class="section-menu__article">
+            <article class="section-menu__article article9">
                 <h2>Mousse au chocolat</h2>
                 <div class="section-menu__article__description">
                 <p>Au piment d'espelette et à la truffe noire</p>
