--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
     <div class="loadcontent">
         <div class="loading"></div>
     </div>
+    <!--HEADER-->
     <header>
         <h1><a href="index.html">ohmyfood</a></h1>
     </header>
+    <!--LOCALISATION-->
     <main>
     <div class="localisation">
         <i class="fas fa-map-marker-alt" ></i>
@@ -30,6 +32,7 @@
         <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
         <a href="#">Explorez nos restaurants</a>
     </section>
+    <!--FONCTIONNEMENT-->
     <section class="section-menu">
         <h2>Fonctionnement</h2>
         <div>
@@ -39,6 +42,7 @@
             <div><i class="fas fa-store icon"></i> Dégustez au restaurant <div class="section-menu__numero">3</div></div>
         </div>
     </section>
+    <!--RESTAURANTS-->
     <section class="section-restaurants">
         <h2 id="section-restaurants__titre">Restaurants</h2>
         <div>
@@ -48,14 +52,20 @@
             <span>Nouveau</span>
             <div class="section-restaurants__article"><h2>La palette du goût</h2>
                  <p>Ménilmontant</p>
-                 <div class="section-restaurants__coeur section-menu__coeur">
+                 <!--<div class="section-restaurants__coeur section-menu__coeur">
                     <i class="coeur1 far fa-heart"></i>
                 </div>
                 <div class="section-restaurant__animation section-menu__animation">
                     <i class="coeur2 fas fa-heart"></i>
-                </div>
+                </div>!-->
             </div>
         </a>
+        <div class="section-restaurants__coeur section-menu__coeur">
+            <i class="coeur1 far fa-heart"></i>
+        </div>
+        <div class="section-restaurant__animation section-menu__animation">
+            <i class="coeur2 fas fa-heart"></i>
+        </div>
             </article> 
             <article class="two">
         <a href="la-note-enchantée.html">
@@ -64,12 +74,18 @@
             <div class="section-restaurants__article">
                 <h2>La note enchantée</h2>
                 <p>Charonne</p>
-                <div class="section-restaurants__coeur section-menu__coeur">
+                <!--<div class="section-restaurants__coeur section-menu__coeur">
                     <i class="coeur1 far fa-heart"></i>
                 </div>
                 <div class="section-restaurant__animation section-menu__animation">
                     <i class="coeur2 fas fa-heart"></i>
-                </div>
+                </div>!-->
+            </div>
+            <div class="section-restaurants__coeur section-menu__coeur">
+                <i class="coeur1 far fa-heart"></i>
+            </div>
+            <div class="section-restaurant__animation section-menu__animation">
+                <i class="coeur2 fas fa-heart"></i>
             </div>
         </a>
         </article>
@@ -79,12 +95,18 @@
                 <div class="section-restaurants__article">
                     <h2>A la française</h2>
                     <p>Cité Rouge</p>
-                    <div class="section-restaurants__coeur section-menu__coeur">
+                    <!--<div class="section-restaurants__coeur section-menu__coeur">
                         <i class="coeur1 far fa-heart"></i>
                     </div>
                     <div class="section-restaurant__animation section-menu__animation">
                         <i class="coeur2 fas fa-heart"></i>
-                    </div>
+                    </div>!-->
+                </div>
+                <div class="section-restaurants__coeur section-menu__coeur">
+                    <i class="coeur1 far fa-heart"></i>
+                </div>
+                <div class="section-restaurant__animation section-menu__animation">
+                    <i class="coeur2 fas fa-heart"></i>
                 </div>
         </a>
         </article>
@@ -94,18 +116,25 @@
             <div class="section-restaurants__article">
                 <h2>Le délice des sens</h2>
                 <p>Folie-Méricourt</p>
-                <div class="section-restaurants__coeur section-menu__coeur">
+                <!--<div class="section-restaurants__coeur section-menu__coeur">
                     <i class="coeur1 far fa-heart"></i>
                 </div>
                 <div class="section-restaurant__animation section-menu__animation">
                     <i class="coeur2 fas fa-heart"></i>
-                </div>
+                </div>!-->
+            </div>
+            <div class="section-restaurants__coeur section-menu__coeur">
+                <i class="coeur1 far fa-heart"></i>
+            </div>
+            <div class="section-restaurant__animation section-menu__animation">
+                <i class="coeur2 fas fa-heart"></i>
             </div>
         </a>
         </article>
         </div>
     </section>
     </main>
+    <!--FOOTER-->
     <footer>
         <h1>ohmyfood</h1>
         <div>
