Ajout des pages html restaurants

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
             </div>
         </a>
         <div class="section-restaurants__coeur section-menu__coeur">
-            <i class="coeur1 far fa-heart"></i>
+            <i class="coeuraccueil1 far fa-heart"></i>
         </div>
         <div class="section-restaurant__animation section-menu__animation">
-            <i class="coeur2 fas fa-heart"></i>
+            <i class="coeuraccueil2 fas fa-heart"></i>
         </div>
             </article> 
             <article class="two">
@@ -83,10 +83,10 @@
             </div>
         </a>
         <div class="section-restaurants__coeur section-menu__coeur">
-            <i class="coeur1 far fa-heart"></i>
+            <i class="coeuraccueil1 far fa-heart"></i>
         </div>
         <div class="section-restaurant__animation section-menu__animation">
-            <i class="coeur2 fas fa-heart"></i>
+            <i class="coeuraccueil2 fas fa-heart"></i>
         </div>
         </article>
         <article class="three">
@@ -104,10 +104,10 @@
                 </div>
         </a>
         <div class="section-restaurants__coeur section-menu__coeur">
-            <i class="coeur1 far fa-heart"></i>
+            <i class="coeuraccueil1 far fa-heart"></i>
         </div>
         <div class="section-restaurant__animation section-menu__animation">
-            <i class="coeur2 fas fa-heart"></i>
+            <i class="coeuraccueil2 fas fa-heart"></i>
         </div>
         </article>
         <article class="four">
@@ -125,10 +125,10 @@
             </div>
         </a>
         <div class="section-restaurants__coeur section-menu__coeur">
-            <i class="coeur1 far fa-heart"></i>
+            <i class="coeuraccueil1 far fa-heart"></i>
         </div>
         <div class="section-restaurant__animation section-menu__animation">
-            <i class="coeur2 fas fa-heart"></i>
+            <i class="coeuraccueil2 fas fa-heart"></i>
         </div>
         </article>
         </div>
