--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <section class="section-explorer">
             <h2>Réservez le menu qui vous convient</h2>
             <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
-            <a href="#">Explorez nos restaurants</a>
+            <a href="#restaurants">Explorez nos restaurants</a>
         </section>
         <!--FONCTIONNEMENT-->
         <section class="section-menu">
@@ -47,7 +47,7 @@
             </div>
         </section>
         <!--RESTAURANTS-->
-        <section class="section-restaurants">
+        <section class="section-restaurants" id="restaurants">
             <h2 id="section-restaurants__titre">Restaurants</h2>
             <div>
                 <article class="one">
